<resources>
    <string name="app_name">FlowerShopApp</string>
    <string name="app_text_logo">Flower</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="email_address_text">Email address</string>
    <string name="password_text">Password</string>
    <string name="view_text">View</string>
    <string name="username_text">Username</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="email_text">Email</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="fullname_text">FullName</string>
    <string name="address_text">Address</string>
    <string name="username_required_text">Username <font color="#D32F2F">*</font></string>
    <string name="password_required_text">Password <font color="#D32F2F">*</font></string>
    <string name="confirm_password_required_text">Confirm Password <font color="#D32F2F">*</font></string>
    <string name="fullname_required_text">FullName <font color="#D32F2F">*</font></string>
    <string name="phone_number_required_text">Phone Number <font color="#D32F2F">*</font></string>
    <string name="address_required_text">Address <font color="#D32F2F">*</font></string>
    <string name="welcome_nfullname_text">Welcome,\nFullName</string>
    <string name="logout_text">Log out</string>
    <string name="logout_confirmation_text">Are you sure you want to log out?</string>
    <string name="cancel_text">Cancel</string>
    <string name="profile_name_text">Name: %1$s</string>
    <string name="profile_email_text">Email: %1$s</string>
    <string name="profile_role_text">Role: %1$s</string>
    <string name="back_text">Back</string>
    <string name="profile_text">Profile</string>
    <string name="store_map_text">Store map</string>
    <string name="order_history_text">Order history</string>
    <string name="order_history_title">Order History</string>
    <string name="order_history_empty_text">You have no orders yet.</string>
    <string name="order_history_view_detail_text">View detail</string>
    <string name="order_history_load_failed_text">Unable to load order history.</string>
    <string name="order_history_detail_failed_text">Unable to load order detail.</string>
    <string name="order_history_detail_unavailable_text">Order detail is unavailable.</string>
    <string name="order_history_no_id_text">This order does not have an ID.</string>
    <string name="order_history_session_expired_text">Session expired. Please sign in again.</string>
    <string name="order_history_unknown_status_text">Unknown status</string>
    <string name="order_history_unknown_date_text">Unknown date</string>
    <string name="order_history_unknown_total_text">Unknown total</string>
    <string name="order_history_detail_title">Order #%1$d</string>
    <string name="order_history_label_status">Status: %1$s</string>
    <string name="order_history_label_date">Order date: %1$s</string>
    <string name="order_history_label_total">Total: %1$s</string>
    <string name="order_history_label_payment_method">Payment method: %1$s</string>
    <string name="order_history_label_address">Address: %1$s</string>
</resources>