<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp">

        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_text_logo"
            android:textSize="56sp"
            android:textColor="#5A5A5A"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSignInTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvLogo"
            app:layout_constraintEnd_toStartOf="@+id/tvSignUpTab"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvSignUpTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textColor="@color/pink_primary"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="@id/tvSignInTab"
            app:layout_constraintStart_toEndOf="@id/tvSignInTab"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="48dp"
            android:labelFor="@+id/edtUsername"
            app:layout_constraintTop_toBottomOf="@id/tvSignInTab"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:autofillHints="username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/tvUsernameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/lineUsername"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtEmail"
            app:layout_constraintTop_toBottomOf="@id/lineUsername"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/lineEmail"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtPassword"
            app:layout_constraintTop_toBottomOf="@id/lineEmail"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:autofillHints="password"
            app:layout_constraintTop_toBottomOf="@id/tvPasswordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/linePassword"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvConfirmPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtConfirmPassword"
            app:layout_constraintTop_toBottomOf="@id/linePassword"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:textStyle="bold"
            android:autofillHints="password"
            app:layout_constraintTop_toBottomOf="@id/tvConfirmPasswordLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/lineConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvFullNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtFullName"
            app:layout_constraintTop_toBottomOf="@id/lineConfirmPassword"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="text"
            android:textStyle="bold"
            android:autofillHints="name"
            app:layout_constraintTop_toBottomOf="@id/tvFullNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/lineFullName"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtFullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvPhoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtPhoneNumber"
            app:layout_constraintTop_toBottomOf="@id/lineFullName"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="phone"
            android:textStyle="bold"
            android:autofillHints="phone"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/linePhoneNumber"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:layout_marginTop="24dp"
            android:labelFor="@+id/edtAddress"
            app:layout_constraintTop_toBottomOf="@id/linePhoneNumber"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingVertical="8dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:inputType="textPostalAddress"
            android:textStyle="bold"
            android:autofillHints="postalAddress"
            app:layout_constraintTop_toBottomOf="@id/tvAddressLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/lineAddress"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_line"
            app:layout_constraintTop_toBottomOf="@id/edtAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#D32F2F"
            android:textSize="14sp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/lineAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/sign_up_text"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="28dp"
            app:backgroundTint="@color/pink_primary"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/tvErrorMessage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>